--- a/apps/GPSTrack/index.html
+++ b/apps/GPSTrack/index.html
@@ -14,6 +14,8 @@
 	<script src="./js/main.js"></script>
 </head>
 <body>
+	<button id="switch" class="off">GPS自動蒐集功能</button>
+	<button id="removeTrack">清除所有點位</button>
 	<div id="mapDiv"></div>
 </body>
 </html>
